--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -2,7 +2,7 @@
 
 I'm an Agile advocate with six years of experience running Scrum and Kanban frameworks. 
 
-My preference between these approaches depends on the context. If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing makes sense. In this context, I can follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. If I'm stretched across several teams, I typically find Kanban most effective. Planning simultaneous sprints becomes too much of a task at this point. It's better to simplify the board and let release deadlines determine documentation priorities.
+My preference between these approaches depends on the context. If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing is effective. In this context, I can follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. If I'm stretched across several teams, I typically find Kanban most effective. Juggling simultaneous sprints can become overwhelming. If this is the case, I prefer to simplify the board and let release deadlines determine documentation priorities.
 
 Above all, I believe in team-created definitions and processes that measure out bite-size chunks of work with testable acceptance criteria. Who doesn't like moving tickets from left to right across the board?! &#128522;
 
@@ -10,14 +10,14 @@ image:agile-board.png[a decorative image showing a people moving tickets across 
 
 == Agile ceremonies
 
-Over the past six years I have experience participating in and leading typical Agile ceremonies:
+I've participated in and led the typical agile ceremonies:
 
 * Daily stand-up meetings
 * Backlog Refinement meetings
 * Sprint Planning meetings
 * Retrospective meetings
 
-If I had to choose only one, I'd pick the daily stand-ups. These quick check-ins are invaluable for divying up work, adjusting priorities, and clarifying uncertainty.
+If I had to choose only one, I'd pick the daily stand-ups. These quick check-ins are great for divvying up work, adjusting priorities, and clarifying uncertainty.
 
 == Definition of done
 
@@ -27,8 +27,8 @@ I'm a fan of the link:https://gamestorming.com/circles-and-soup/[Circles and Sou
 
 == Document early and often
 
-I'd rather involve docs earlier in the software development life cycle (SDLC) than later. The "document late" approach is generally dated, though there is such thing as documenting too early. As a general rule, once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as development irons out the nitty-gritty details, adjusting course and reviewing changes is a more straight forward process.
+I'd rather involve docs earlier in the software development life cycle (SDLC) than later. The "document late" approach is generally dated, though there is such thing as documenting too early. Once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as development irons out the nitty-gritty details, adjusting course and reviewing changes is a more straight forward process.
 
 == Tight feedback loops
 
-What I appreciate most about Agile is how it encourages efficient communication. 15-minute daily stand-ups and quick touch-points with SMEs provide consistent opportunities to share updates. My favorite type of feedback loop is the team retrospective. This meeting can occur after each Sprint or, less frequently, following a release milestone. Developing a cadence for feedback is largely what makes Agile such a successful approach and mindset.
+What I appreciate most about Agile is how it encourages efficient communication. 15-minute daily stand-ups and quick touch-points with SMEs provide consistent opportunities to share meaningful updates. Other meetings, like team retrospectives, celebrate wins and set goals for how to improve existing processes. Developing a cadence for feedback is largely what makes Agile such a successful approach and mindset.
