--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -2,11 +2,12 @@
 
 I'm an Agile advocate with six years of experience running Scrum and Kanban frameworks. 
 
-My preference between these approaches depends on the context. If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing is effective. In this context, I can follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. If I'm stretched across several teams, I typically find Kanban most effective. Juggling simultaneous sprints can become overwhelming. If this is the case, I prefer to simplify the board and let release deadlines determine documentation priorities.
+My preference between these approaches depends on the context. If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing are effective. I'll try to follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. If I'm stretched across several teams, I typically prefer Kanban. Juggling simultaneous sprints is overwhelming at a certain point. In this case, it's better to simplify the board and let release deadlines determine priorities. Proper scoping of tickets with xref:docs-as-code.adoc#_testability[testable acceptance criteria] turns that intimidating mountain into small, manageable rocks.
 
-Above all, I believe in team-created definitions and processes that measure out bite-size chunks of work with testable acceptance criteria. Who doesn't like moving tickets from left to right across the board?! &#128522;
+Above all, I believe in team-created definitions and processes with tight feedback loops. 
 
-image:agile-board.png[a decorative image showing a people moving tickets across a Kanban board,350,auto]
+.Who doesn't like moving tickets from left to right across the board?! &#128522;
+image::agile-board.png[a decorative image showing a people moving tickets across a Kanban board,350,auto]
 
 == Agile ceremonies
 
