--- a/modules/ROOT/examples/good-ac.adoc
+++ b/modules/ROOT/examples/good-ac.adoc
@@ -1,5 +1,8 @@
+.Good example of acceptance criteria
+====
 Documentation covering the following use-cases:
 
 * [task] fresh install workflow for new users
 * [task] upgrade workflow for existing users (USA)
 * [task] upgrade workflow for existing users (UK) 
+====
